@@ -60,6 +60,7 @@ notify_host(int udp_s, struct query* q, struct query *answer,
 	struct addrinfo* res, const char* addrstr)
 {
 	int timeout_retry = 5; /* seconds */
+	int num_retry = 5; /* times to try */
 	fd_set rfds;
 	struct timeval tv;
 	int retval = 0;
@@ -92,6 +93,12 @@ notify_host(int udp_s, struct query* q, struct query *answer,
 			return;
 		}
 		if (retval == 0) {
+			num_retry--;
+			if(num_retry == 0) {
+				warning("error: failed to send notify to %s.\n",
+					addrstr);
+				exit(1);
+			}
 			warning("timeout (%d s) expired, retry notify to %s.\n",
 				timeout_retry, addrstr);
 		}
@@ -156,7 +163,6 @@ add_key(region_type* region, const char* opt)
 	}
 	key->size = sz;
 	tsig_add_key(key);
-	log_msg(LOG_INFO, "added key %s", dname_to_string(key->name, NULL));
 	return key;
 }
 #endif /* TSIG */
@@ -258,8 +264,6 @@ main (int argc, char *argv[])
 		tsig_sign(&tsig);
 		tsig_append_rr(&tsig, q.packet);
 		ARCOUNT_SET(q.packet, ARCOUNT(q.packet) + 1);
-		log_msg(LOG_INFO, "TSIG signed query with key %s", 
-			dname_to_string(tsig_key->name, NULL));
 	}
 #endif
 	buffer_flip(q.packet);
