@@ -16,6 +16,7 @@
 .Nm nsd-patch
 .Op Fl c Ar configfile
 .Op Fl l
+.Op Fl x Ar difffile
 .Sh DESCRIPTION
 .Ic Nsd-patch
 is the zone patcher for
@@ -30,6 +31,8 @@ Read specified configfile instead of the default
 .Pa /etc/nsd/nsd.conf .
 .It Fl l
 List the journal entries from the difffile. Does not write to zone files.
+.It Fl x Ar difffile
+Read specified difffile. Overrides the config file setting.
 .El
 .Sh FILES
 .Bl -tag -width indent
