@@ -1,6 +1,12 @@
 27 June 2006: Wouter
 	- Fixed read in server.c to be a blocking read for sure,
 	  even if ipc is not blocking on the OS.
+	- nsd-notify tries to send notify 5 times, then exits with error.
+	- nsd-checkconf can lookup key secrets by name from a config file.
+	- difffile option is always set in options struct with default
+	  or config value.
+	- nsd-patch uses dnames to compare zone names (for trailing .).
+	- nsdc updated to work with config file.
 
 26 June 2006: Wouter
 	- Nicer check in autoconf for struct timespec type.
